Fix: Use CDN for Tailwind CSS to resolve loading issue
- Revert to Tailwind CDN for stable loading
- Keep local main.css for custom styles
- Move icon to assets/img/ structure maintained
- All custom styles preserved in local files

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <meta name="keywords" content="cairkan bpjs, jht, bpjs ketenagakerjaan, pencairan dana, online">
     <meta name="author" content="CairBPJS.COM">
     
-    <!-- Load Local CSS Files -->
-    <link href="assets/css/tailwind.css" rel="stylesheet">
+    <!-- Load CSS Files -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body class="bg-white min-h-screen text-gray-800">
