--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <meta name="keywords" content="cairkan bpjs, jht, bpjs ketenagakerjaan, pencairan dana, online">
     <meta name="author" content="CairBPJS.COM">
     
-    <!-- Load CSS Files -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Load Local CSS Files -->
+    <link href="assets/css/tailwind-lite.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body class="bg-white min-h-screen text-gray-800">
