Improve social media preview with proper Open Graph image
- Create custom social-preview.svg for better sharing preview
- Update og:image and twitter:image to use new preview
- Add image dimensions for better platform compatibility
- Create social-generator.html for creating PNG version if needed
- Replace placeholder images that were causing wrong previews
- Professional social media card design with branding

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <!-- Open Graph Meta Tags for Social Media Sharing -->
     <meta property="og:title" content="CairBPJS.COM - Cairkan BPJS Ketenagakerjaan Anda Hari Ini!">
     <meta property="og:description" content="Layanan pencairan dana JHT BPJS Ketenagakerjaan yang cepat dan terpercaya. 100% online, proses 2-5 hari kerja. Tanpa ribet, data aman!">
-    <meta property="og:image" content="https://cairbpjs.com/assets/img/ico.png">
-    <meta property="og:image:alt" content="CairBPJS.COM Logo - Layanan Pencairan BPJS">
+    <meta property="og:image" content="https://cairbpjs.com/assets/img/social-preview.svg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="CairBPJS.COM - Layanan Pencairan BPJS Ketenagakerjaan Online">
     <meta property="og:url" content="https://cairbpjs.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="CairBPJS.COM">
@@ -26,7 +28,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="CairBPJS.COM - Cairkan BPJS Ketenagakerjaan Anda Hari Ini!">
     <meta name="twitter:description" content="Layanan pencairan dana JHT BPJS Ketenagakerjaan yang cepat dan terpercaya. 100% online, proses 2-5 hari kerja.">
-    <meta name="twitter:image" content="https://cairbpjs.com/assets/img/ico.png">
+    <meta name="twitter:image" content="https://cairbpjs.com/assets/img/social-preview.svg">
+    <meta name="twitter:image:alt" content="CairBPJS.COM - Layanan Pencairan BPJS Ketenagakerjaan Online">
     
     <!-- Additional SEO Meta Tags -->
     <meta name="description" content="Layanan pencairan dana JHT BPJS Ketenagakerjaan yang cepat dan terpercaya. 100% online, proses 2-5 hari kerja. Tanpa ribet, data aman!">
